# mediawiki

./: .dockerignore  .gitignore  Dockerfile  README.md  base.html  docker-compose.yml  list-of-highest-mountains-on-earth.txt  parser.py  pyproject.toml
html/: LocalSettings.php
