[tool.poetry]
name = "mediawiki"
version = "1.0.0"
description = ""
authors = ["Binh Vu <binh@toan2.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
